--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,27 +1,52 @@
+body {
+background: linear-gradient(to bottom, rgba(255,255,255,0.8) 0%, rgba(0,0,0,0.9) 100%), radial-gradient(at top center, rgba(255,255,255, 1) 0%, rgba(0,0,0,0.40) 100%) #999999;
+ background-blend-mode: multiply,multiply;
+}
+
 nav {
+  align-items: baseline;
   width: 100%;
   text-align: right;
   position: relative;
 }
 
 nav ul {
-  margin: 5px 0px;
+  padding: 0px!important;
   float: right;
+  margin-right: 20px;
 }
 
 nav ul li {
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 nav a {
   text-decoration: none;
-  color: #CCC;
-  font-size: 0.55em;
-  margin-right: 10px;
+  color: #DDD;
+  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+  font-size: 0.85em;
 }
 
 nav a:hover {
-  color: #fff;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
+}
+
+header {
+  font-size: 0.8em;
+  width: 100%;
+}
+
+header h1{
+  color: #DDD;
+  margin-top: 30%;
+}
+
+header h2 {
+  font-family: sans-serif;
+  color: #ff2255;
+  margin-top: -40px;
+  font-size: 1em;
+  margin-left: 15px;
 }
