--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -29,6 +29,7 @@ nav a {
 }
 
 nav a:hover {
+  color: #cc1332;
   transition-duration: 0.5s;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
 }
@@ -45,7 +46,7 @@ header h1{
 
 header h2 {
   font-family: sans-serif;
-  color: #ff2255;
+  color: #cc1332;
   margin-top: -40px;
   font-size: 1em;
   margin-left: 15px;
